--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 <script type="text/javascript">
   const rootElement = document.getElementById('root')
-  const element = document.createElement('div')
-  element.textContent = 'Hello World'
-  rootElement.appendChild(element);
+//  const element = document.createElement('div')
+//  element.textContent = 'Hello World'
+//  rootElement.appendChild(element);
+  const element = React.createElement(
+    'div', 
+    {
+      className: 'container',
+      children: ['Hello World,', ' Goodbye World']
+    }
+  )
+  ReactDOM.render(element, rootElement);
 </script>
