--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 
 <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-<script type="text/javascript">
+<script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+<script type="text/babel">
   const rootElement = document.getElementById('root')
 //  const element = document.createElement('div')
 //  element.textContent = 'Hello World'
 //  rootElement.appendChild(element);
-  const element = React.createElement(
-    'div', 
-    {
-      className: 'container',
-      children: ['Hello World,', ' Goodbye World']
-    }
-  )
+//  const element = React.createElement(
+//    'div', 
+//    {
+//      className: 'container',
+//      children: ['Hello World,', ' Goodbye World']
+//    }
+//  )
+  const element = <div className='container'>Hello World</div>
   ReactDOM.render(element, rootElement);
 </script>
