--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 <script type="text/babel">
   const rootElement = document.getElementById('root')
-//  const element = document.createElement('div')
-//  element.textContent = 'Hello World'
-//  rootElement.appendChild(element);
+  
+////React Create Element ////////////////////////////
 //  const element = React.createElement(
 //    'div', 
 //    {
@@ -16,6 +15,20 @@
 //      children: ['Hello World,', ' Goodbye World']
 //    }
 //  )
-  const element = <div className='container'>Hello World</div>
+  
+////JSX and Interpolation  
+//  const content = 'Hello World'
+//  const myClassName = 'container'
+//  // curly braces exits JSX and enters javascript
+//  const element = <div className={myClassName + '_hi'}>{content}</div>
+  
+//Spread property 
+  const props = {
+    className: 'container',
+    children: 'Hello World'
+  }
+  // whatever comes after the props overrides what is in the props
+  const element = <div children="Goodbye World" {...props} className="my-class" />
+  
   ReactDOM.render(element, rootElement);
 </script>
