--- a/index.html
+++ b/index.html
@@ -7,28 +7,16 @@
 <script type="text/babel">
   const rootElement = document.getElementById('root')
   
-////React Create Element ////////////////////////////
-//  const element = React.createElement(
-//    'div', 
-//    {
-//      className: 'container',
-//      children: ['Hello World,', ' Goodbye World']
-//    }
-//  )
-  
-////JSX and Interpolation  
-//  const content = 'Hello World'
-//  const myClassName = 'container'
-//  // curly braces exits JSX and enters javascript
-//  const element = <div className={myClassName + '_hi'}>{content}</div>
-  
-//Spread property 
-  const props = {
-    className: 'container',
-    children: 'Hello World'
-  }
-  // whatever comes after the props overrides what is in the props
-  const element = <div children="Goodbye World" {...props} className="my-class" />
+  //props
+  const Message = props => <div>{props.children}</div>
+        
+  const element = (
+    <div className="container">
+      <Message>Hello World
+        <Message>Goodbye World</Message>
+      </Message>
+    </div>
+  )
   
   ReactDOM.render(element, rootElement);
 </script>
