--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+<script type="application/javascript" src="https://unpkg.com/prop-types@15.6.2/prop-types.js"></script>
 <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 <script type="text/babel">
   const rootElement = document.getElementById('root')
@@ -26,20 +27,11 @@
       </div>
     )
   }
-
-  const PropTypes = {
-    string(props, propName, componentName) {
-      if (typeof props[propName] !== 'string') {
-        return new Error('Hey, ${propName} should be a string')
-      }
-    }
-  }
   
   SayHello.propTypes = {
     firstName: PropTypes.string,
     lastName: PropTypes.string,
   }
-
   
   ReactDOM.render(
     <SayHello firstName={true} lastName={false} />, rootElement
