--- a/index.html
+++ b/index.html
@@ -6,35 +6,18 @@
 <script type="application/javascript" src="https://unpkg.com/prop-types@15.6.2/prop-types.js"></script>
 <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 <script type="text/babel">
-  const rootElement = document.getElementById('root')
-  
-////props
-//  const Message = props => <div>{props.children}</div>
-//        
-//  const element = (
-//    <div className="container">
-//      <Message>Hello World
-//        <Message>Goodbye World</Message>
-//      </Message>
-//    </div>
-//  )
+  // conditional rendering
+  function Message({message}) {
+    if (!message) {
+      return <div>No Message</div>
+    } else { 
+      return <div>{message}</div>
+    }
+  }
 
-//Prop Validation
-  function SayHello(props) {
-    return (
-      <div>
-        Hello {props.firstName} {props.lastName}!
-      </div>
-    )
-  }
-  
-  SayHello.propTypes = {
-    firstName: PropTypes.string,
-    lastName: PropTypes.string,
-  }
-  
   ReactDOM.render(
-    <SayHello firstName={true} lastName={false} />, rootElement
-  );
+    <Message message={null} />,
+    document.getElementById('root')
+  )
 
 </script>
