--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
 <script type="application/javascript" src="https://unpkg.com/prop-types@15.6.2/prop-types.js"></script>
 <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 <script type="text/babel">
-  //Rerender 
-
-  const rootElement = document.getElementById('root');
-
-  function tick() {
-    const time = new Date().toLocaleTimeString()
-    const element = <div>It is {time}</div>
-    ReactDOM.render(element, rootElement)
-  }
-
-  tick();
-  setInterval(tick, 1000);
-
+  const element = (
+    <div>
+      <div style={{paddingLeft: '20px'}}>box</div>
+    </div>
+  )
+  
+  ReactDOM.render(
+    element,
+    document.getElementById('root')
+  )
 </script>
