--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 <script type="application/javascript" src="https://unpkg.com/prop-types@15.6.2/prop-types.js"></script>
 <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 <script type="text/babel">
-  const element = (
+const className = 'box box--small'  
+const props = {
+  className,
+  style: {paddingLeft: 20}
+}
+const element = (
     <div>
-      <div style={{paddingLeft: '20px'}}>box</div>
+      <div {...props}>box</div>
     </div>
   )
   
