--- a/index.html
+++ b/index.html
@@ -20,10 +20,22 @@ function Box({style, className = '', ...rest}) {
 const element = (
     <div>
       <Box 
-        className="boxsmall" 
+        className="box--small" 
         style={{backgroundColor: 'lightblue'}}
       >
         small box
+      </Box>
+      <Box 
+        className="box--medium" 
+        style={{backgroundColor: 'pink'}}
+      >
+        medium box
+      </Box>
+      <Box 
+        className="box--large" 
+        style={{backgroundColor: 'orange'}}
+      >
+        large box
       </Box>
     </div>
   )
