--- a/index.html
+++ b/index.html
@@ -7,41 +7,31 @@
 <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 <script type="text/babel">
 
-function Box({style, className = '', ...rest}) {
+const state = {eventCount: 0, username: ''}
+
+function App() {
   return (
-    <div 
-      className={'box ${className}'}
-      style={{paddingLeft: 20, ...style}}
-      {...rest}
-    />
-  )
+  <div>
+    <p>
+      There have been {state.eventCount} events
+    </p>
+    <p>
+      <button>Click Here</button>
+    </p>
+    <p>You typed: {state.username}</p>
+    <p>
+      <input />
+    </p>
+  </div>)
 }
 
-const element = (
-    <div>
-      <Box 
-        className="box--small" 
-        style={{backgroundColor: 'lightblue'}}
-      >
-        small box
-      </Box>
-      <Box 
-        className="box--medium" 
-        style={{backgroundColor: 'pink'}}
-      >
-        medium box
-      </Box>
-      <Box 
-        className="box--large" 
-        style={{backgroundColor: 'orange'}}
-      >
-        large box
-      </Box>
-    </div>
-  )
+function setState(newState) {
+  Object.assign(state, newState)
+  renderApp()
+}
   
   ReactDOM.render(
-    element,
+    <App />,
     document.getElementById('root')
   )
 </script>
