--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 <script type="text/babel">
 
-function StopWatch() {
+function StopWatch({lapse, running}) {
   const buttonStyles = {
     border: '1px solid #ccc',
     background: '#fff',
@@ -21,15 +21,15 @@ function StopWatch() {
       <label
         style={{fontSize: '5em', display: 'block'}}
       >
-        0ms
+        {lapse}ms
       </label>
-      <button style={buttonStyles}>Start</button>
+      <button style={buttonStyles}>{running ? 'Stop' : 'Start'}</button>
       <button style={buttonStyles}>Clear</button>
     </div>
   )
 }
 
-const element = <StopWatch />
+const element = <StopWatch running={false} lapse={0} />
 ReactDOM.render(
   element,
   document.getElementById('root')
