--- a/index.html
+++ b/index.html
@@ -7,26 +7,29 @@
 <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 <script type="text/babel">
 
-function StopWatch({lapse, running}) {
-  const buttonStyles = {
-    border: '1px solid #ccc',
-    background: '#fff',
-    fontSize: '2em',
-    padding: 15,
-    margin: 5,
-    width: 200
+class StopWatch extends React.Component {
+  render() {
+    const {lapse, running} = this.props
+    const buttonStyles = {
+      border: '1px solid #ccc',
+      background: '#fff',
+      fontSize: '2em',
+      padding: 15,
+      margin: 5,
+      width: 200
+    }
+    return (
+      <div style= {{textAlign: 'center'}}>
+        <label
+          style={{fontSize: '5em', display: 'block'}}
+        >
+          {lapse}ms
+        </label>
+        <button style={buttonStyles}>{running ? 'Stop' : 'Start'}</button>
+        <button style={buttonStyles}>Clear</button>
+      </div>
+    )
   }
-  return (
-    <div style= {{textAlign: 'center'}}>
-      <label
-        style={{fontSize: '5em', display: 'block'}}
-      >
-        {lapse}ms
-      </label>
-      <button style={buttonStyles}>{running ? 'Stop' : 'Start'}</button>
-      <button style={buttonStyles}>Clear</button>
-    </div>
-  )
 }
 
 const element = <StopWatch running={false} lapse={0} />
