--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ class StopWatch extends React.Component {
       this.timer = setInterval(() => {
         this.setState({
           lapse: Date.now() - startTime
-        })
+        }, () => {
+        console.log(this.state.lapse);
+      })
       })
     }
       return {running: !state.running}
@@ -29,6 +31,9 @@ class StopWatch extends React.Component {
   clearState = () => {
     clearInterval(this.timer)
     this.setState({lapse:0, running:false})
+  }
+  componentWillUnmount() {
+    clearInterval(this.timer)
   }
   render() {
     const {lapse, running} = this.state
