--- a/index.html
+++ b/index.html
@@ -6,65 +6,23 @@
 <script type="application/javascript" src="https://unpkg.com/prop-types@15.6.2/prop-types.js"></script>
 <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 <script type="text/babel">
-
-class StopWatch extends React.Component {
-  state = {lapse: 0, running:false}
-  handleRunClick = () => {
-    this.setState(state => {
-     if (state.running) {
-       clearInterval(this.timer)
-     } else {
-      const startTime = Date.now() - this.state.lapse
-      this.timer = setInterval(() => {
-        this.setState({
-          lapse: Date.now() - startTime
-        }, () => {
-        console.log(this.state.lapse);
-      })
-      })
+  class Counter extends React.Component {
+    constructor(...args) {
+      super(...args)
+      this.state = {count: 0}
     }
-      return {running: !state.running}
-    }
-      
-    )
-  }
-  clearState = () => {
-    clearInterval(this.timer)
-    this.setState({lapse:0, running:false})
-  }
-  componentWillUnmount() {
-    clearInterval(this.timer)
-  }
-  render() {
-    const {lapse, running} = this.state
-    const buttonStyles = {
-      border: '1px solid #ccc',
-      background: '#fff',
-      fontSize: '2em',
-      padding: 15,
-      margin: 5,
-      width: 200
-    }
-    return (
-      <div style= {{textAlign: 'center'}}>
-        <label
-          style={{fontSize: '5em', display: 'block'}}
-        >
-          {lapse}ms
-        </label>
-        <button onClick={this.handleRunClick} 
-                style={buttonStyles}>{running ? 'Stop' : 'Start'}
+    render() {
+      return (
+        <button onClick={this.handleClick}>
+          {this.state.count}
         </button>
-        <button onClick={this.clearState}
-                style={buttonStyles}>Clear</button>
-      </div>
-    )
+      )
+    }
   }
-}
 
-const element = <StopWatch />
-ReactDOM.render(
-  element,
-  document.getElementById('root')
-)      
+  const element = <Counter />
+  ReactDOM.render(
+    element,
+    document.getElementById('root')
+  )
 </script>
