--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     constructor(...args) {
       super(...args)
       this.state = {count: 0}
+      this.handleClick = this.handleClick.bind(this)
     }
     handleClick() {
       this.setState(({count}) => ({
@@ -18,7 +19,7 @@
     }
     render() {
       return (
-        <button onClick={this.handleClick.bind(this)}>
+        <button onClick={this.handleClick}>
           {this.state.count}
         </button>
       )
