--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
 <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 <script type="text/babel">
   class Counter extends React.Component {
-    constructor(...args) {
-      super(...args)
-      this.state = {count: 0}
-      this.handleClick = this.handleClick.bind(this)
-    }
+    state = {count: 0}
+    handleClick = this.handleClick.bind(this)
     handleClick() {
       this.setState(({count}) => ({
         count: count + 1
       }))
     }
+
     render() {
       return (
         <button onClick={this.handleClick}>
