--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 <script type="text/babel">
   class Counter extends React.Component {
     state = {count: 0}
-    handleClick = this.handleClick.bind(this)
-    handleClick() {
+    handleClick = function() {
       this.setState(({count}) => ({
         count: count + 1
       }))
-    }
+    }.bind(this)
 
     render() {
       return (
